--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.5",
     "three": "^0.159.0",
     "three-globe": "^2.30.0",
     "web-vitals": "^2.1.4"
